clusters/manifests/podinfo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: podinfo
  annotations:
    load-balancer.hetzner.cloud/location: hel1
    load-balancer.hetzner.cloud/ipv6-disabled: true
    load-balancer.hetzner.cloud/protocol: tcp
spec:
  type: LoadBalancer
  selector:
    app: podinfo
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
    - port: 9999
      targetPort: grpc
      protocol: TCP
      name: grpc
